Change work type property from String to WorkType
Signed-off-by: Moti Asayag <masayag@redhat.com>